--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
-    "dns": "^0.2.2",
-    "module": "^1.2.5",
+    "dns": "^0.1.2",
+    "module": "^1.0.0",
     "mongodb": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
@@ -26,7 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.32.0",
+    "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.1.0",
     "vue-template-compiler": "^2.6.11",
