--- a/client/package.json
+++ b/client/package.json
@@ -8,29 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.26.0",
-    "bcryptjs": "^2.4.3",
     "core-js": "^3.21.0",
     "dns": "^0.2.2",
+    "firebase": "^9.17.1",
     "module": "^1.2.5",
-    "mongodb": "^4.3.1",
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.12",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
     "vuetify": "*"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-router": "^4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.9.0",
-    "eslint-plugin-vue": "^8.4.1",
-    "sass": "~1.49.7",
-    "sass-loader": "^12.4.0",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.3"
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.1.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
