--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-node_modules/
-.vscode/
-**/node_modules
-.idea/
-secret.json
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
